Fix responsiveness of search well and languages list
* Search input doesn't overlap the checkboxes now
* Languages are now set in 2 columns if there's room for it

--- a/css/boxed.css
+++ b/css/boxed.css
@@ -55,3 +55,14 @@
 #test2{
 	*width: 100%;
 }
+
+#typeahead {
+	width: 85%;
+}
+
+@media screen and (min-width: 480px) and (max-width: 768px) {
+	div#data div.span4 {
+		width: 50%;
+		margin-right: 0;
+	}
+}
